@@ -129,6 +129,7 @@ static constexpr char ScriptReserved_SetTotalSecretCount[]		= "SetTotalSecretCou
 static constexpr char ScriptReserved_AddSecret[]				= "AddSecret";
 static constexpr char ScriptReserved_EnableFlyCheat[]			= "EnableFlyCheat";
 static constexpr char ScriptReserved_EnableMassPickup[]			= "EnableMassPickup";
+static constexpr char ScriptReserved_EnableLaraInTitle[]		= "EnableLaraInTitle";
 
 // Flow Functions
 static constexpr char ScriptReserved_SetStrings[]			= "SetStrings";
